Net/b8eabfa83668_error.log


--------------------------------------------------------------------
                      Generation ODE/SDE model
--------------------------------------------------------------------



Compiling general transition file

SAVING TIME: 0.031

#Computing p-semiflows and place bounds: 
/usr/local/GreatSPN/bin/PN2ODE /home/queueHPCmodel_unf -M


 =========================================================
|	      	        PN to ODE        	          |
 =========================================================

 If you find any bug, send an email to beccuti@di.unito.it!
Transition IO_queue_a_app1_n_n1_q_q01 has function:  Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

Transition IO_queue_a_app1_n_n1_q_q11 has function:  Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

Transition IO_queue_a_app1_n_n1_q_q21 has function:  Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

Transition IO_queue_a_app1_n_n1_q_q31 has function:  Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

Transition IO_queue_a_app1_n_n1_q_q41 has function:  Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

Transition IO_end_a_app1_n_n1_q_q01 has function:  Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

Transition IO_end_a_app1_n_n1_q_q11 has function:  Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

Transition IO_end_a_app1_n_n1_q_q21 has function:  Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

Transition IO_end_a_app1_n_n1_q_q31 has function:  Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

Transition IO_end_a_app1_n_n1_q_q41 has function:  Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

Transition State_start_a_app1_n_n1_x_mpi2 has function:  Call["State_start_mpi_general", FromTimeTable["State_start", 0, 0]]

Transition State_start_a_app1_n_n1_x_other3 has function:  Call["State_start_other_general", FromTimeTable["State_start", 0, 0]]

Transition State_end_a_app1_n_n1_x_mpi2 has function:  Call["State_end_mpi_general", FromTimeTable["State_end", 0, 0]]

Transition State_end_a_app1_n_n1_x_other3 has function:  Call["State_end_other_general", FromTimeTable["State_end", 0, 0]]

Transition IO_start_a_app1_n_n1_q_q01 has function:  Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

Transition IO_start_a_app1_n_n1_q_q11 has function:  Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

Transition IO_start_a_app1_n_n1_q_q21 has function:  Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

Transition IO_start_a_app1_n_n1_q_q31 has function:  Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

Transition IO_start_a_app1_n_n1_q_q41 has function:  Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]



------------------------------------------------
               Start  encoding
------------------------------------------------

Opening file: /home/queueHPCmodel_unf.bnd
Opening file: /home/queueHPCmodel_unf.pin
Warning: it is not possible to open input file .bnd

Warning: it is not possible to open input file .pin



START EXECUTION...
Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

 stoken è Call["IO_queue_general",
Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

 stoken è Call["IO_queue_general",
Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

 stoken è Call["IO_queue_general",
Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

 stoken è Call["IO_queue_general",
Call["IO_queue_general", FromTimeTable["IO_queue", 0, 0]]

 stoken è Call["IO_queue_general",
Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

 stoken è Call["IO_end_general",
Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

 stoken è Call["IO_end_general",
Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

 stoken è Call["IO_end_general",
Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

 stoken è Call["IO_end_general",
Call["IO_end_general", FromTimeTable["IO_end", 0, 0]]

 stoken è Call["IO_end_general",
Call["State_start_mpi_general", FromTimeTable["State_start", 0, 0]]

 stoken è Call["State_start_mpi_general",
Call["State_start_other_general", FromTimeTable["State_start", 0, 0]]

 stoken è Call["State_start_other_general",
Call["State_end_mpi_general", FromTimeTable["State_end", 0, 0]]

 stoken è Call["State_end_mpi_general",
Call["State_end_other_general", FromTimeTable["State_end", 0, 0]]

 stoken è Call["State_end_other_general",
Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

 stoken è Call["IO_start_general",
Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

 stoken è Call["IO_start_general",
Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

 stoken è Call["IO_start_general",
Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

 stoken è Call["IO_start_general",
Call["IO_start_general", FromTimeTable["IO_start", 0, 0]]

 stoken è Call["IO_start_general",

	Warning: no imlicit places are considered.

	Done.

------------------------------------------------
                 End encoding
------------------------------------------------


===================== INFO =====================
 Total Time: 0.003357 sec
 Total Used Memory: 3736KB
 Output saved in: queueHPCmodel_unf.cpp
================================================


/home/queueHPCmodel_unf
#cd /usr/local/GreatSPN/scripts/../inst_src
#Copying file form /usr/local/GreatSPN/scripts/../inst_src to /tmp/tmp.rnAx6Z295q

#cat /tmp/tmp.rnAx6Z295q/tmpB /tmp/tmp.rnAx6Z295q/incl1  /home/docker/gen_tran_out.cpp  /tmp/tmp.rnAx6Z295q/tmpE >> /tmp/tmp.rnAx6Z295q/tmpA
FuncT
#cat /tmp/tmp.rnAx6Z295q/tmpA >>  /tmp/tmp.rnAx6Z295q/class.cpp

#cd /tmp/tmp.rnAx6Z295q

#Compiling ... 
g++ -I./  -o  /home/queueHPCmodel_unf.solver  /home/queueHPCmodel_unf.cpp  ./class.cpp  ./lsode.cpp ./readSupport.cpp  -O3 -std=c++11 -lm -Wall
./class.cpp:3998:1: error: expected unqualified-id before ‘if’
 3998 | if(!out){
      | ^~
./class.cpp: In function ‘double SDE::IO_queue_general(double*, std::map<std::__cxx11::basic_string<char>, int>&, std::map<std::__cxx11::basic_string<char>, int>&, const std::vector<std::__cxx11::basic_string<char> >&, const InfTr*, int, const double&, double)’:
./class.cpp:4069:3: warning: this ‘for’ clause does not guard... [-Wmisleading-indentation]
 4069 |   for (;i<placesIndex.size()&&Value[placesIndex[i]]==0;++i);
      |   ^~~
./class.cpp:4070:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
 4070 |     prvStateId=placesIndex[i];
      |     ^~~~~~~~~~
make: *** [makefile:28: normal] Error 1
#Error during compilation. 


